# cppfsm

./: .gitignore  CMakeLists.txt  README.md  configure  main.cpp
mocks/: MockState.h
src/: AppFSM.cpp  AppFSM.h  Events.h  IFSM.h  IList.h  IState.h  List.h  States.h
tests/: AppFSMTests.cpp
